                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 31-05-2005 fixed: paplayer could crash when next song is played
 - 30-05-2005 updated: mplayer.dll
 - 30-05-2005 updated: Swedish strings.xml Again: Please submit better translations if possible for this as i know some translations just suck!
 - 30-05-2005 reverted: aspectratio change in dvdplayer (original solution was much better) + added aspectratio override from dvd ifo files.
 - 30-05-2005 fixed: some frames where missed when navigating in dvd menus. (only partial fix, still problems)
 - 29-05-2005 changed: simplified vorbisfile.dll handling
 - 29-05-2005 fixed: ogg and flac files could not be started from the database view after rescan
 - 29-05-2005 fixed: audioscrobbler submits only the first song when using PAPlayer v2
 - 29-05-2005 added: support for ogg bitstreams aka chapters (vorbisfile.dll got updated)
 - 28-05-2005 added: SF patch [ 1203847 ] New info tags for musicplayer, thanks to desertbear
                     new info item are: MusicPlayer.PlaylistPosition, MusicPlayer.PlaylistLength, MusicPlayer.Codec
                     MusicPlayer.Bitrate (kbps), MusicPlayer.BitsPerSample, MusicPlayer.Channels, MusicPlayer.SampleRate (kHz)
 - 28-05-2005 fixed: SMB Share Controll, when set to Normal User, the default share place should be all [GeminiServer]
 - 27-05-2005 updated: Korean language file (Thnx to AkoXko)
 - 27-05-2005 updated: German language file
 - 27-05-2005 updated: Italian language file (Thnx to kotix)
 - 27-05-2005 updated: Norwegian language file (Thnx to vnm)
 - 27-05-2005 updated: French language file (Thnx to modhack)
 - 27-05-2005 updated: Polish language file (Thnx to napek)